Sort by degree.

--- a/connectedafrica/templates/browser.html
+++ b/connectedafrica/templates/browser.html
@@ -38,7 +38,7 @@
                   {% if result.degree == 0 %}
                     no connections.
                   {% elif result.degree == 1 %}
-                    One connection.
+                    one connection.
                   {% else %}
                     {{result.degree}} connections.
                   {% endif %}
