Factor out organizations listing page, similar to browser.

--- a/connectedafrica/templates/browser.html
+++ b/connectedafrica/templates/browser.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% from 'paginator.html' import paginate %}
+{% from 'macros/paginator.html' import paginate %}
 
 {% block title %}Explore{% endblock %}
 
