--- a/connectedafrica/templates/nav.html
+++ b/connectedafrica/templates/nav.html
@@ -11,6 +11,7 @@
   <div class="collapse navbar-collapse" id="main-menu">
     <ul class="nav navbar-nav">
       <li><a href="{{url_for('browser.view')}}">Explore</a></li>
+      <li><a href="{{url_for('browser.organizations')}}">Organizations</a></li>
       <li><a href="{{url_for('base.page', path='about')}}">About</a></li>
     </ul>
     <form class="navbar-form navbar-right navbar-search" role="search"
