Make the relations lists into tables, after all.

--- a/connectedafrica/templates/browser.html
+++ b/connectedafrica/templates/browser.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% from 'macros/paginator.html' import paginate %}
-{% from 'macros/mini.html' import connections %}
+{% from 'macros/snippets.html' import connections %}
 
 {% block title %}Explore{% endblock %}
 
