--- a/connectedafrica/templates/organizations.html
+++ b/connectedafrica/templates/organizations.html
@@ -1,6 +1,5 @@
 {% extends "layout.html" %}
-{% from 'macros/paginator.html' import paginate %}
-{% from 'macros/mini.html' import connections %}
+{% from 'macros/snippets.html' import connections %}
 
 {% block title %}Companies, non-profits and other organizations{% endblock %}
 
