Begin loading graph data from the API.

--- a/connectedafrica/templates/profile/base.html
+++ b/connectedafrica/templates/profile/base.html
@@ -40,6 +40,8 @@
     <div class="col-md-8">
       <!-- TODO: summary and/or abstract -->
 
+      <div id="graph-viz" data-entity-id="{{entity.id}}" data-api-endpoint="{{PROJECT_API}}"></div>
+
       <table class="table table-condensed">
         {% for property in properties %}
           <tr>
