--- a/connectedafrica/templates/profile/base.html
+++ b/connectedafrica/templates/profile/base.html
@@ -40,7 +40,7 @@
     <div class="col-md-8">
       <!-- TODO: summary and/or abstract -->
 
-      <div id="graph-viz" data-entity-id="{{entity.id}}" data-api-endpoint="{{PROJECT_API}}"></div>
+      <div id="graph-viz" style="height: 300px;" data-entity-id="{{entity.id}}" data-api-endpoint="{{PROJECT_API}}"></div>
 
       <table class="table table-condensed">
         {% for property in properties %}
