--- a/connectedafrica/templates/layout.html
+++ b/connectedafrica/templates/layout.html
@@ -38,6 +38,8 @@
           "vendor/jquery/dist/jquery.js",
           "vendor/bootstrap/js/collapse.js",
           "vendor/bootstrap/js/dropdown.js",
+          "vendor/d3/d3.js",
+          "vendor/webcola/WebCola/cola.v3.min.js",
           "js/graph.js"
       %}
       <script type="text/javascript" src="{{ ASSET_URL }}"></script>
