--- a/connectedafrica/static/style/style.less
+++ b/connectedafrica/static/style/style.less
@@ -1,5 +1,27 @@
+// Core variables and mixins
 @import "../vendor/bootstrap/less/variables.less";
-@import "variables.less";
+@import "../vendor/bootstrap/less/mixins.less";
+
+// Variables
+
+@theme-color: #1ad68f;
+@light-text-color: @gray-light;
+@border-color: #ddd;
+
+// Functional
+
+@footer-bg: @body-bg;
+@footer-fg: @gray-dark;
+@header-bg: @body-bg;
+@header-fg: @theme-color;
+
+// Bootstrap overrides
+@brand-primary: @theme-color;
+@nav-tabs-border-color: @border-color;
+@table-border-color: @border-color;
+
+@import "bootstrap.less";
+
 // Mixins
 .grayscale-image {
   -webkit-filter: grayscale(100%);
