Begin implementing the new (mockup draft 3) layout.

--- a/connectedafrica/templates/footer.html
+++ b/connectedafrica/templates/footer.html
@@ -1,6 +1,6 @@
 <footer>
-  <div class="container-fluid">
-    <div class="row">
+  <div class="container">
+    <!--div class="row">
       <div class="col-md-3 col-sm-6">
         <ul>
           <li><a href="{{url_for('base.page', path='about')}}">About {{APP_NAME}}</a></li>
@@ -16,17 +16,19 @@
         </ul>
       </div>
     </div>
-    <hr>
+    <hr-->
     <div class="row">
       <div class="col-md-6">
         <p>
-          {{APP_NAME}} is a project of the <a href="http://iss.co.za">Institute
-            for Security Studies</a> and the <a href="http://www.investigativecenters.org/">
-            African Network of Centers for Investigative Reporting</a>, with support
+          {{APP_NAME}} explores the links between politics, power and money in South Africa. 
+          It is a project of the <a href="http://iss.co.za">Institute
+          for Security Studies</a> and the <a href="http://www.investigativecenters.org/">
+          African Network of Centers for Investigative Reporting</a>, with support
           from the <a href="http://icfj.org">International Center for Journalists</a>.
         </p>
         <p>
-        Content licensed under the terms of <a href="https://creativecommons.org/licenses/by/4.0/">Creative Commons 4.0 BY</a>
+          Content licensed under the terms of
+          <a href="https://creativecommons.org/licenses/by/4.0/">Creative Commons 4.0 BY</a>
         </p>
       </div>
       <div class="col-md-6 partners">
