--- a/connectedafrica/templates/layout.html
+++ b/connectedafrica/templates/layout.html
@@ -2,14 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <title>{% block title %}(Untitled){% endblock %} - {{APP_NAME}}</title>
     <meta name="description" content="{% block description %}{% endblock %}">
     <meta name="keywords" content="{% block keywords %}power, influence, south africa, politics, corruption, connectedafrica, conflicts of interest, illicit ties, pretoria, cape town{% endblock %}">
-    <meta name="author" content="Institute for Security Studies, Code for Africa, ANCIR">
-
     <meta name="og:site_name" content="{{APP_NAME}}">
 
     {% assets filters="less,cssmin,cssrewrite", output="gen/app.css",
@@ -23,9 +19,15 @@
     <link rel="shortcut icon" href="{{ url_for('static', filename='images/favicon.png') }}">
   </head>
   <body>
-    <div class="container-fluid">
-      {% include 'nav.html' %}
-      {% block content %}{% endblock %}
+    {% include 'header.html' %}
+    <div class="container">
+      <div class="row">
+        <div class="col-md-3">
+          {% include 'sidebar.html' %}
+        </div>
+        <div class="col-md-9">
+          {% block content %}{% endblock %}
+        </div>
     </div>
     {% include 'footer.html' %}
     
