--- a/connectedafrica/templates/layout.html
+++ b/connectedafrica/templates/layout.html
@@ -22,10 +22,10 @@
     {% include 'header.html' %}
     <div class="container">
       <div class="row">
-        <div class="col-md-3">
+        <div class="col-sm-3 hidden-xs">
           {% include 'sidebar.html' %}
         </div>
-        <div class="col-md-9">
+        <div class="col-sm-9">
           {% block content %}{% endblock %}
         </div>
     </div>
