Re-work content pages a bit.

--- a/connectedafrica/static/style/style.less
+++ b/connectedafrica/static/style/style.less
@@ -124,6 +124,7 @@ footer {
   .container {
     margin-top: 2em;
     padding-top: 2em;
+    padding-bottom: 2em;
     border-top: 1px solid @border-color;  
   }
   
@@ -173,6 +174,16 @@ h3.section-title {
   margin-top: 2em;
 }
 
+
+//////////////////////////////////////////////////////
+// Content pages
+
+#pages {
+  p, ul {
+    font-size: 1.2em; 
+    line-height: 1.6em;
+  }
+}
 
 //////////////////////////////////////////////////////
 // Network diagram
