--- a/connectedafrica/templates/sidebar.html
+++ b/connectedafrica/templates/sidebar.html
@@ -3,7 +3,7 @@
     <li class="list-group-item">People <small>8388</small></li>
     <li class="list-group-item">Organizations <small>2098</small></li>
     <li class="list-group-item">Committees <small>98</small></li>
-    <li class="list-group-item">About</li>
-    <li class="list-group-item">Data</li>
+    <li class="list-group-item"><a href="{{url_for('base.page', path='about')}}">About</a></li>
+    <li class="list-group-item"><a href="{{url_for('base.page', path='data')}}">Data</a></li>
   </ul>
 </div>
