Fix up facets for sidebar menu.

--- a/connectedafrica/static/style/style.less
+++ b/connectedafrica/static/style/style.less
@@ -141,6 +141,17 @@ footer {
 
 
 //////////////////////////////////////////////////////
+// Browse page
+
+table.table.table-search {
+  th, td {
+    border-top: 0;
+    padding-left: 0;
+  }
+}
+
+
+//////////////////////////////////////////////////////
 // Profile page
 
 
@@ -155,9 +166,9 @@ table.table.table-properties {
 }
 
 table.table.table-relations {
-  th {
-    border-top: 0;
-  }
+  //th {
+  //  border-top: 0;
+  //}
 }
 
 img.profile-image {
