--- a/connectedafrica/templates/header.html
+++ b/connectedafrica/templates/header.html
@@ -12,6 +12,11 @@
           <span class="input-group-addon"><i class="fa fa-search"></i></span>
           <input type="text" name="q" value="{{query_text}}"
             class="form-control" placeholder="Search for politicians and companies in South Africa">
+          {% for schema, url, active, count in sidebar_schemata %}
+            {% if active %}
+              <input type="hidden" name="schema" value="{{schema.name}}">
+            {% endif %}
+          {% endfor %}
         </div>
       </form>
     </nav>
