--- a/connectedafrica/templates/index.html
+++ b/connectedafrica/templates/index.html
@@ -5,13 +5,13 @@
 {% endblock %}
 
 {% block content %}
-  <div class="jumbotron">
+  <!--div class="jumbotron">
     <h1>{{APP_NAME}}</h1>
     <p>
       We explore the links between politics, power and money in 
       South Africa.
     </p>
-  </div>
+  </div-->
   <div class="row">
     <div class="col-md-8">
       <h3>What is {{APP_NAME}}?</h3>
