--- a/connectedafrica/templates/sidebar.html
+++ b/connectedafrica/templates/sidebar.html
@@ -1,8 +1,11 @@
 <div id="sidebar">
   <ul class="list-group">
-    <li class="list-group-item">People <small>8388</small></li>
-    <li class="list-group-item">Organizations <small>2098</small></li>
-    <li class="list-group-item">Committees <small>98</small></li>
+    {% for schema, url, active, count in sidebar_schemata %}
+      <li class="list-group-item">
+        <a href="{{url}}">{{schema.meta.plural or schema.label}}</a>
+        <small>{{count}}</small>
+      </li>
+    {% endfor %}
     <li class="list-group-item"><a href="{{url_for('base.page', path='about')}}">About</a></li>
     <li class="list-group-item"><a href="{{url_for('base.page', path='data')}}">Data</a></li>
   </ul>
