Fix up the results pager style.

--- a/connectedafrica/static/style/style.less
+++ b/connectedafrica/static/style/style.less
@@ -150,6 +150,10 @@ table.table.table-search {
   }
 }
 
+.pagination {
+  margin-top: 0;
+}
+
 
 //////////////////////////////////////////////////////
 // Profile page
