--- a/connectedafrica/templates/sidebar.html
+++ b/connectedafrica/templates/sidebar.html
@@ -6,6 +6,7 @@
         <small>{{count}}</small>
       </li>
     {% endfor %}
+    <li class="list-group-item">&nbsp;</li>
     <li class="list-group-item"><a href="{{url_for('base.page', path='about')}}">About</a></li>
     <li class="list-group-item"><a href="{{url_for('base.page', path='data')}}">Data</a></li>
   </ul>
