--- a/connectedafrica/templates/layout.html
+++ b/connectedafrica/templates/layout.html
@@ -20,6 +20,7 @@
   </head>
   <body>
     {% include 'header.html' %}
+    {% block banner %}{% endblock %}
     <div class="container">
       <div class="row">
         <div class="col-sm-3 hidden-xs">
