--- a/connectedafrica/templates/index.html
+++ b/connectedafrica/templates/index.html
@@ -26,7 +26,7 @@
       </tr>
     {% endfor %}
     <tr>
-        <td colspan="2" class="num">...and {{res.data.total - res.data.limit}} more.</td>
+        <td colspan="2" class="num">...and {{res.data.total - res.data.limit}} more</td>
     </tr>
   </table>
 {% endmacro %}
